force-app/main/default/objects/DevOps_Deployment_Approval__c/DevOps_Deployment_Approval__c.object-meta.xml
<CustomObject>
    <description>Release-manager approval required before PROD deployment. Enforced in the tool layer, not the prompt.</description>
    <label>DevOps Deployment Approval</label>
    <nameField>
        <displayFormat>APR-{00000}</displayFormat>
        <label>Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <pluralLabel>DevOps Deployment Approvals</pluralLabel>
</CustomObject>