force-app/main/default/objects/DevOps_Deployment_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>DevOps Approvals</relationshipLabel>
    <relationshipName>DevOps_Approvals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>