force-app/main/default/objects/DevOps_Deployment_Approval__c/fields/Commit_SHA__c.field-meta.xml
<CustomField>
    <fullName>Commit_SHA__c</fullName>
    <label>Approved Commit SHA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>