force-app/main/default/objects/DevOps_Deployment_Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>