force-app/main/default/objects/DevOps_Deployment_Approval__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <label>Target Environment</label>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>